cancel button in create form.  Fixed scrollbars throughout system (as best I can)

--- a/FormBuilder/src/main/webapp/assets/styles/partials/_panels.scss
+++ b/FormBuilder/src/main/webapp/assets/styles/partials/_panels.scss
@@ -10,11 +10,11 @@
   margin-bottom: 0px;
   ul{
     height: 352px;
-    overflow: scroll;
+    overflow: auto;
   }
 }
 .panel-content{
-  overflow: scroll;
+  overflow: auto;
 }
 .panel-temp{
   font-size: 10px;
